--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -18,7 +18,7 @@
 
   <!-- PWA -->
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
-  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.19.v3">
+  <link rel="manifest" href="./manifest.webmanifest?v=2025.11.19.v4">
   <meta name="theme-color" content="#0d1117">
   <link rel="apple-touch-icon" href="./assets/android-chrome-512x512.png">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -132,6 +132,9 @@
   <script type="module" src="./js/scan-asistencia.js"></script>
   <script type="module" src="./js/pwa-install.js"></script>
   <script type="module" src="./js/sw-register.js"></script>
+
+  <!-- Generador de imágenes del modal -->
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 </body>
 </html>
